--- a/public/Assets/css/sb-admin-2.css
+++ b/public/Assets/css/sb-admin-2.css
@@ -11541,11 +11541,13 @@ a:focus {
 .sidebar .nav-item .nav-link {
   text-align: center;
   padding: 0.75rem 1rem;
+  text-decoration: none !important;
   width: 6.5rem;
 }
 
 .sidebar .nav-item .nav-link span {
   font-size: 0.65rem;
+  text-decoration: none !important;
   display: block;
 }
 
@@ -11574,9 +11576,11 @@ a:focus {
 .sidebar .nav-item .collapsing .collapse-inner {
   padding: .5rem 0;
   min-width: 10rem;
+  text-decoration: none !important;
   font-size: 0.85rem;
   margin: 0 0 1rem 0;
 }
+
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-header,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-header {
@@ -11595,7 +11599,7 @@ a:focus {
   margin: 0 0.5rem;
   display: block;
   color: #3a3b45;
-  text-decoration: none;
+  
   border-radius: 0.35rem;
   white-space: nowrap;
 }
@@ -11603,18 +11607,22 @@ a:focus {
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:hover,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item:hover {
   background-color: #eaecf4;
+  text-decoration: none !important;
 }
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item:active {
   background-color: #dddfeb;
+  text-decoration: none !important;
 }
 
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active,
 .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
   color: #4e73df;
   font-weight: 700;
+  text-decoration: none !important;
 }
+
 
 .sidebar #sidebarToggle {
   width: 2.5rem;
@@ -11749,6 +11757,7 @@ a:focus {
     display: block;
     width: 100%;
     text-align: left;
+    text-decoration: none !important;
     padding: 1rem;
     width: 14rem;
   }
@@ -11771,6 +11780,7 @@ a:focus {
     border: 0;
     font-weight: 900;
     content: '\f107';
+    text-decoration: none !important;
     font-family: 'Font Awesome 5 Free';
   }
 
